[WEB] Fixing scroll and carousel spacing

--- a/apps/nextjs/src/styles/globals.css
+++ b/apps/nextjs/src/styles/globals.css
@@ -3,10 +3,6 @@
 @tailwind utilities;
 
 @layer base {
-  html {
-    overflow-y: hidden;
-  }
-
   body {
     @apply bg-[#121214] bg-galaxy bg-cover bg-no-repeat text-white;
   }
